MonetDB/src/mal/Tests/tst030.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2002, CWI. All rights reserved.
# compiled for i686-pc-linux-gnu/32bit.
# gdk_dbfarm:/ufs/mk/monet_5-0/Linux/../dbfarm
# gdk_dbname:demo
# gdk_dbdir:/ufs/mk/monet_5-0/Linux/../dbfarm/demo
# gdk_distr:/ufs/mk/monet_5-0/Linux
# monetrc:/ufs/mk/.monet.conf
## check testing for illegal assigments to control variables
#
#barrier w:= 1>0;
#	w:= false;
#	print(w);
#end	w;
#
function Admin.main():int;	#0:(main:int)
barrier	w := calc.>(1,0);	#1:(w:bit)<-($2:int)($3:int)
	w := false;	#2:(w:bit)<-($4:bit)
	mal.print(w);	#3:($5:int)<-(w:bit)
end	w;	#4:(w:bit)
end function;	#5:
!ERROR: label 'w' is readonly in main[2]
!ERROR: SyntaxError:Admin.main[0]:'Admin.main' contains errors

>